--- a/index.html
+++ b/index.html
@@ -1792,8 +1792,7 @@
 
     document.getElementById('copyCodeButton').onclick = () => {
       console.log('Copy code button clicked');
-      navigator.clipboard.writeText(code
-                                    document.getElementById('copyCodeButton').onclick = () => {
+      navigator.clipboard.writeText(codedocument.getElementById('copyCodeButton').onclick = () => {
   console.log('Copy code button clicked');
   navigator.clipboard.writeText(code).then(() => {
     showStatusMessage('Code copied to clipboard!');
