--- a/admin.html
+++ b/admin.html
@@ -56,7 +56,7 @@
         const statsList = document.getElementById('statsList');
         const statusElement = document.getElementById('status');
         const refreshButton = document.getElementById('refreshButton');
-        const adminSecret = Pig12Bannapets34Shitbits@; // Replace with a secure secret key
+        const adminSecret = 'Pig12Bannapets34Shitbits@'; // Replace with a secure secret key
 
         function fetchStats() {
             if (socket.readyState === WebSocket.OPEN) {
