--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       }
       #maxClientsContainer {
         position: absolute;
-        bottom: -300px;
+        bottom: -335px;
         left: 50%;
         transform: translateX(-50%);
         width: 100%;
@@ -408,11 +408,6 @@
         cursor: not-allowed;
       }
     }
-    .timestamp {
-      font-size: 0.75rem;
-      opacity: 0.8;
-      margin-bottom: 0.25rem;
-    }
   </style>
 </head>
 <body class="bg-black min-h-screen flex items-center justify-center">
@@ -588,13 +583,23 @@
       const messageId = generateMessageId();
       const timestamp = Date.now();
       const message = { messageId, type: 'image', data: base64, username, timestamp };
-      const jsonString = JSON.stringify(message);
-      dataChannels.forEach((dataChannel, targetId) => {
-        if (dataChannel.readyState === 'open') {
-          dataChannel.send(jsonString);
+      if (useRelay) {
+        // Fallback: Send to server for relay
+        if (socket.readyState === WebSocket.OPEN) {
+          socket.send(JSON.stringify({ type: 'relay-image', code, clientId, ...message }));
         }
-      });
-
+      } else if (dataChannels.size > 0) {
+        // P2P mode
+        const jsonString = JSON.stringify(message);
+        dataChannels.forEach((dataChannel) => {
+          if (dataChannel.readyState === 'open') {
+            dataChannel.send(jsonString);
+          }
+        });
+      } else {
+        showStatusMessage('Error: No connections.');
+        return;
+      }
       const messages = document.getElementById('messages');
       const messageDiv = document.createElement('div');
       messageDiv.className = 'message-bubble self';
@@ -667,6 +672,7 @@
     let usernames = new Map();
     const messageRateLimits = new Map();
     let codeSentToRandom = false;
+    let useRelay = false; // Flag for fallback to server relay
 
     const statusElement = document.getElementById('status');
     const codeDisplayElement = document.getElementById('codeDisplay');
@@ -875,6 +881,64 @@
           console.log(`Received ICE candidate from ${message.clientId} for code: ${code}`);
           handleCandidate(message.candidate, message.clientId);
         }
+        // Add for relay fallback
+        if ((message.type === 'message' || message.type === 'image') && useRelay) {
+          // Process relayed message from server
+          if (processedMessageIds.has(message.messageId)) return;
+          processedMessageIds.add(message.messageId);
+          const senderUsername = message.username;
+          const messages = document.getElementById('messages');
+          const isSelf = senderUsername === username;
+          const messageDiv = document.createElement('div');
+          messageDiv.className = `message-bubble ${isSelf ? 'self' : 'other'}`;
+          const timeSpan = document.createElement('span');
+          timeSpan.className = 'timestamp';
+          timeSpan.textContent = new Date(message.timestamp).toLocaleTimeString();
+          messageDiv.appendChild(timeSpan);
+          if (message.type === 'image') {
+            messageDiv.appendChild(document.createTextNode(`${senderUsername}: `));
+            const img = document.createElement('img');
+            img.src = message.data;
+            img.style.maxWidth = '100%';
+            img.style.borderRadius = '0.5rem';
+            img.style.cursor = 'pointer';
+            img.setAttribute('alt', 'Received image');
+            img.addEventListener('click', () => {
+              let modal = document.getElementById('imageModal');
+              if (!modal) {
+                modal = document.createElement('div');
+                modal.id = 'imageModal';
+                modal.className = 'modal';
+                modal.setAttribute('role', 'dialog');
+                modal.setAttribute('aria-label', 'Image viewer');
+                modal.setAttribute('tabindex', '-1');
+                document.body.appendChild(modal);
+              }
+              modal.innerHTML = '';
+              const modalImg = document.createElement('img');
+              modalImg.src = message.data;
+              modalImg.setAttribute('alt', 'Enlarged image');
+              modal.appendChild(modalImg);
+              modal.classList.add('active');
+              modal.focus();
+              modal.addEventListener('click', () => {
+                modal.classList.remove('active');
+                document.getElementById('messageInput').focus();
+              });
+              modal.addEventListener('keydown', (event) => {
+                if (event.key === 'Escape') {
+                  modal.classList.remove('active');
+                  document.getElementById('messageInput').focus();
+                }
+              });
+            });
+            messageDiv.appendChild(img);
+          } else {
+            messageDiv.appendChild(document.createTextNode(`${senderUsername}: ${sanitizeMessage(message.content)}`));
+          }
+          messages.prepend(messageDiv);
+          messages.scrollTop = messages.scrollHeight;
+        }
       } catch (error) {
         console.error('Error parsing message:', error);
         showStatusMessage('Error receiving message, please try again.');
@@ -1064,16 +1128,12 @@
 
       const timeout = setTimeout(() => {
         if (!dataChannels.get(targetId) || dataChannels.get(targetId).readyState !== 'open') {
-          console.log(`Connection timed out with ${targetId}`);
+          console.log(`P2P failed with ${targetId}, falling back to relay`);
+          useRelay = true;
+          showStatusMessage('P2P connection failed, switching to server relay mode.');
           cleanupPeerConnection(targetId);
-          const retryCount = retryCounts.get(targetId) || 0;
-          if (retryCount < maxRetries) {
-            retryCounts.set(targetId, retryCount + 1);
-            console.log(`Retrying connection attempt ${retryCount + 1} with ${targetId}`);
-            startPeerConnection(targetId, isOfferer);
-          }
         }
-      }, 30000);
+      }, 10000); // 10s timeout for fallback
       connectionTimeouts.set(targetId, timeout);
     }
 
@@ -1118,7 +1178,7 @@
           showStatusMessage('Invalid message received.');
           return;
         }
-        if (!data.messageId || !data.username || (!data.content && data.type !== 'image') || (data.type === 'image' && !data.data) || !data.timestamp) {
+        if (!data.messageId || !data.username || (!data.content && data.type !== 'image') || (data.type === 'image' && !data.data)) {
           console.log(`Invalid message format from ${targetId}:`, data);
           return;
         }
@@ -1132,12 +1192,8 @@
         const isSelf = senderUsername === username;
         const messageDiv = document.createElement('div');
         messageDiv.className = `message-bubble ${isSelf ? 'self' : 'other'}`;
-        const timeSpan = document.createElement('span');
-        timeSpan.className = 'timestamp';
-        timeSpan.textContent = new Date(data.timestamp).toLocaleTimeString();
-        messageDiv.appendChild(timeSpan);
+        messageDiv.textContent = `${senderUsername}: `;
         if (data.type === 'image') {
-          messageDiv.appendChild(document.createTextNode(`${senderUsername}: `));
           const img = document.createElement('img');
           img.src = data.data;
           img.style.maxWidth = '100%';
@@ -1175,7 +1231,7 @@
           });
           messageDiv.appendChild(img);
         } else {
-          messageDiv.appendChild(document.createTextNode(`${senderUsername}: ${sanitizeMessage(data.content)}`));
+          messageDiv.textContent += sanitizeMessage(data.content);
         }
         messages.prepend(messageDiv);
         messages.scrollTop = messages.scrollHeight;
@@ -1323,12 +1379,20 @@
         const sanitizedContent = sanitizeMessage(content);
         const timestamp = Date.now();
         const message = { messageId, content: sanitizedContent, username, timestamp };
-        const jsonString = JSON.stringify(message);
-        dataChannels.forEach((dataChannel, targetId) => {
-          if (dataChannel.readyState === 'open') {
-            dataChannel.send(jsonString);
+        if (useRelay) {
+          // Fallback: Send to server for relay
+          if (socket.readyState === WebSocket.OPEN) {
+            socket.send(JSON.stringify({ type: 'relay-message', code, clientId, ...message }));
           }
-        });
+        } else {
+          // P2P mode
+          const jsonString = JSON.stringify(message);
+          dataChannels.forEach((dataChannel, targetId) => {
+            if (dataChannel.readyState === 'open') {
+              dataChannel.send(jsonString);
+            }
+          });
+        }
         const messages = document.getElementById('messages');
         const messageDiv = document.createElement('div');
         messageDiv.className = 'message-bubble self';
