--- a/admin.html
+++ b/admin.html
@@ -24,13 +24,12 @@
             color: #000;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            max-width: 600px;
+            max-width: 500px;
             width: 100%;
         }
         #statsList {
             list-style: none;
             padding: 0;
-            text-align: left;
         }
         .stat-item {
             padding: 10px;
@@ -56,7 +55,7 @@
         const statsList = document.getElementById('statsList');
         const statusElement = document.getElementById('status');
         const refreshButton = document.getElementById('refreshButton');
-        const adminSecret = 'Pig12Bannapets34Shitbits@'; // Replace with a secure secret key
+        const adminSecret = prompt('Enter admin secret:'); // Prompts for the secret each time
 
         function fetchStats() {
             if (socket.readyState === WebSocket.OPEN) {
