--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Anonomoose Chat</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
   <link rel="icon" type="image/png" href="https://cdnjs.cloudflare.com/ajax/libs/twemoji/14.0.2/72x72/1f60e.png"/>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.1.6/purify.min.js"></script>
   <style>
     * {
       cursor: default;
@@ -408,6 +407,10 @@
         opacity: 0.6;
         cursor: not-allowed;
       }
+    }
+    .timestamp {
+      font-size: 0.5rem;
+      opacity: 0.8;
     }
   </style>
 </head>
