--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Anonomoose Chat</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
   <link rel="icon" type="image/png" href="https://cdnjs.cloudflare.com/ajax/libs/twemoji/14.0.2/72x72/1f60e.png"/>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.1.6/purify.min.js"></script>
   <style>
     * {
       cursor: default;
@@ -157,6 +158,10 @@
       color: white;
       margin-right: auto;
       border-bottom-left-radius: 0.25rem;
+    }
+    .timestamp {
+      font-size: 0.5rem;
+      opacity: 0.8;
     }
     .modal {
       display: none;
@@ -408,10 +413,6 @@
         cursor: not-allowed;
       }
     }
-    .timestamp {
-      font-size: 0.5rem;
-      opacity: 0.8;
-    }
   </style>
 </head>
 <body class="bg-black min-h-screen flex items-center justify-center">
@@ -478,6 +479,7 @@
       <p><strong>Copy Code:</strong> Copies the code so you can send to people in text or social chats</p>
     </div>
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.1.6/purify.min.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
