--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       --text-help: #000;
       --bg-max: #000;
       --text-max: white;
+      --timestamp-opacity: 0.8;
     }
     .dark {
       --bg-color: #111;
@@ -42,6 +43,7 @@
       --text-help: #fff;
       --bg-max: #222;
       --text-max: #ddd;
+      --timestamp-opacity: 0.7;
     }
     body {
       background-color: var(--bg-color);
@@ -52,7 +54,6 @@
     }
     .bg-white {
       background-color: var(--bg-color);
-      color: var(--text-color);
     }
     #status {
       color: var(--text-status);
@@ -94,12 +95,15 @@
     #maxClientsContainer span {
       color: var(--text-max);
     }
-    #toggleDarkMode {
+    .timestamp {
+      opacity: var(--timestamp-opacity);
+    }
+    #darkModeToggle {
       background-color: var(--bg-copy);
       color: var(--text-msg);
     }
-    #toggleDarkMode:hover {
-      background-color: #059669; /* Adjust for dark if needed */
+    #darkModeToggle:hover {
+      background-color: #059669;
     }
     * {
       cursor: default;
@@ -442,6 +446,8 @@
         align-items: center;
       }
       #maxClientsRadios button {
+        background-color: #3b82f6;
+        color: white;
         border-radius: 0.5rem;
         padding: 0.5rem;
         font-size: 1rem;
@@ -463,32 +469,32 @@
     }
   </style>
 </head>
-<body class="bg-black min-h-screen flex items-center justify-center">
+<body class="min-h-screen flex items-center justify-center">
   <div class="corner-logo" id="cornerLogo" role="img" aria-label="Anonomoose Chat logo"></div>
   <div class="flex w-full max-w-xl">
     <div class="bg-white p-8 rounded-lg shadow-lg flex-grow">
-      <h1 class="text-3xl font-bold mb-8 text-center text-gray-800">Anonomoose Chat</h1>
-      <div id="status" class="text-center mb-4 text-gray-600" role="status" aria-live="polite">Start a new chat or connect to an existing one</div>
+      <h1 class="text-3xl font-bold mb-8 text-center">Anonomoose Chat</h1>
+      <div id="status" class="text-center mb-4" role="status" aria-live="polite">Start a new chat or connect to an existing one</div>
       <div id="initialContainer">
-        <button id="startChatToggleButton" class="bg-blue-500 text-white px-4 py-2 rounded w-full mb-2 hover:bg-blue-600 transition-colors" aria-label="Start a new chat">Start Chat</button>
-        <button id="connectToggleButton" class="bg-green-500 text-white px-4 py-2 rounded w-full hover:bg-green-600 transition-colors" aria-label="Connect to an existing chat">Connect to Chat</button>
+        <button id="startChatToggleButton" class="px-4 py-2 rounded w-full mb-2 hover:transition-colors" aria-label="Start a new chat">Start Chat</button>
+        <button id="connectToggleButton" class="px-4 py-2 rounded w-full hover:transition-colors" aria-label="Connect to an existing chat">Connect to Chat</button>
       </div>
       <div id="usernameContainer" class="hidden">
         <label for="usernameInput" class="sr-only">Enter your username</label>
-        <input id="usernameInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter your username (1-16 chars)" aria-describedby="usernameHelp" maxlength="16">
-        <div id="usernameHelp" class="text-sm text-gray-600 mb-2">Username must be 1-16 alphanumeric characters</div>
-        <button id="joinWithUsernameButton" class="bg-blue-500 text-white px-4 py-2 rounded w-full hover:bg-blue-600 transition-colors" aria-label="Join chat with username">Join Chat</button>
-        <button id="backButton" class="bg-gray-500 text-white px-4 py-2 rounded w-full mt-2 hover:bg-gray-600 transition-colors" aria-label="Back to main menu">Back</button>
+        <input id="usernameInput" type="text" class="border p-2 w-full mb-2 rounded" placeholder="Enter your username (1-16 chars)" aria-describedby="usernameHelp" maxlength="16">
+        <div id="usernameHelp" class="text-sm mb-2">Username must be 1-16 alphanumeric characters</div>
+        <button id="joinWithUsernameButton" class="px-4 py-2 rounded w-full hover:transition-colors" aria-label="Join chat with username">Join Chat</button>
+        <button id="backButton" class="px-4 py-2 rounded w-full mt-2 hover:transition-colors" aria-label="Back to main menu">Back</button>
       </div>
-      <div id="codeDisplay" class="text-center mb-4 font-mono text-lg text-gray-800 hidden" role="region" aria-live="polite"></div>
+      <div id="codeDisplay" class="text-center mb-4 font-mono text-lg hidden" role="region" aria-live="polite"></div>
       <div id="chatContainer" class="hidden">
-        <button id="newSessionButton" class="bg-red-500 text-white px-2 py-1 rounded w-full mb-1 rounded hover:bg-red-600 transition-colors hidden" aria-label="Start a new session">New Session</button>
+        <button id="newSessionButton" class="px-2 py-1 rounded w-full mb-1 hidden" aria-label="Start a new session">New Session</button>
         <div class="button-group">
           <button id="button1" aria-label="Send code to random chat board">Send Code</button>
           <button id="button2" aria-label="Join a random chat">Random Chat</button>
           <button id="copyCodeButton" aria-label="Copy chat code">Copy Code</button>
         </div>
-        <div id="messages" class="border border-gray-300 p-4 h-64 overflow-y-auto mb-4 rounded" role="log" aria-live="polite"></div>
+        <div id="messages" class="border p-4 h-64 overflow-y-auto mb-4 rounded" role="log" aria-live="polite"></div>
         <div class="input-container hidden">
           <label for="messageInput" class="sr-only">Type a message</label>
           <textarea id="messageInput" placeholder="Type a message..." cols="30" maxlength="1000" aria-describedby="messageHelp"></textarea>
@@ -500,21 +506,20 @@
       </div>
       <div id="connectContainer" class="hidden">
         <label for="usernameConnectInput" class="sr-only">Enter your username</label>
-        <input id="usernameConnectInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter your username (1-16 chars)" aria-describedby="usernameConnectHelp" maxlength="16">
-        <div id="usernameConnectHelp" class="text-sm text-gray-600 mb-2">Username must be 1-16 alphanumeric characters</div>
+        <input id="usernameConnectInput" type="text" class="border p-2 w-full mb-2 rounded" placeholder="Enter your username (1-16 chars)" aria-describedby="usernameConnectHelp" maxlength="16">
+        <div id="usernameConnectHelp" class="text-sm mb-2">Username must be 1-16 alphanumeric characters</div>
         <label for="codeInput" class="sr-only">Enter chat code</label>
-        <input id="codeInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter code (xxxx-xxxx-xxxx-xxxx)" aria-describedby="codeHelp" maxlength="19">
-        <div id="codeHelp" class="text-sm text-gray-600 mb-2">Code format: xxxx-xxxx-xxxx-xxxx</div>
-        <button id="connectButton" class="bg-green-500 text-white px-4 py-2 rounded w-full hover:bg-green-600 transition-colors" aria-label="Connect to chat">Connect</button>
-        <button id="backButtonConnect" class="bg-gray-500 text-white px-4 py-2 rounded w-full mt-2 hover:bg-gray-600 transition-colors" aria-label="Back to main menu">Back</button>
+        <input id="codeInput" type="text" class="border p-2 w-full mb-2 rounded" placeholder="Enter code (xxxx-xxxx-xxxx-xxxx)" aria-describedby="codeHelp" maxlength="19">
+        <div id="codeHelp" class="text-sm mb-2">Code format: xxxx-xxxx-xxxx-xxxx</div>
+        <button id="connectButton" class="px-4 py-2 rounded w-full hover:transition-colors" aria-label="Connect to chat">Connect</button>
+        <button id="backButtonConnect" class="px-4 py-2 rounded w-full mt-2 hover:transition-colors" aria-label="Back to main menu">Back</button>
       </div>
       <div class="text-center mt-4">
-        <button id="helpText" class="text-blue-500 hover:underline" aria-label="View help information">Help</button>
-        <button id="toggleDarkMode" class="ml-2 bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600 transition-colors" aria-label="Toggle dark mode">Toggle Dark Mode</button>
+        <button id="helpText" class="hover:underline" aria-label="View help information">Help</button>
       </div>
     </div>
-    <div id="maxClientsContainer" class="hidden flex flex-col justify-center bg-black p-4 rounded-lg shadow-lg">
-      <span class="text-white mb-2 font-bold">Max Users</span>
+    <div id="maxClientsContainer" class="hidden flex flex-col justify-center p-4 rounded-lg shadow-lg">
+      <span class="mb-2 font-bold">Max Users</span>
       <div id="maxClientsRadios" class="grid grid-cols-5 gap-2" role="radiogroup" aria-label="Select maximum number of users"></div>
     </div>
   </div>
